# downloader2json

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  runner.sh
.github/workflows/: pylint.yml  tests.yml
downloader/: async_2.py  base.py  control.py  get.py  main.py  models.py  serializer.py  utils.py
src/: Dockerfile  pyproject.toml  requirements.txt
src/downloader/: __main__.py  async_1.py  async_2.py  main.py  models.py
src/tests/: test.py  test_download.py  test_save.py
